added lists dynamically and a mixin for footer

--- a/src/styles/partials/_mixin.scss
+++ b/src/styles/partials/_mixin.scss
@@ -1,2 +1,8 @@
 // classi custom di css da aggiungere con @include + nome classe
 // esempio di classe: @mixin flex {display: flex}
+
+@mixin reset {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
